# guacamole-server

./: .asf.yaml  .dockerignore  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING  ChangeLog  DISCLAIMER  Depend-on-debian.sh  Dockerfile  Dockerfile.debian  Dockerfile.dev  Dockerfile.windows  Makefile.am  NOTICE  Notes.md  README  README-unit-testing.md  README-windows-build.md  build_readme.md  configure  configure.ac  fips.patch
guacd/: .gitignore  .package.dsc  ChangeLog  Makefile.am  README  configure.ac  configure.in
guacd/include/: client.h  log.h  thread.h
guacd/init.d/: guacd.in
guacd/man/: guacd.8
guacd/src/: client.c  daemon.c  log.c  thread.c
libguac/: .gitignore  .package.dsc  AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  configure.ac  configure.in  test
libguac/doc/: Doxyfile  docbook.xslt
libguac/include/: client-handlers.h  client.h  error.h  guacio.h  guaclog.h  hash.h  instruction.h  layer.h  log.h  palette.h  plugin.h  pool.h  protocol.h  resource.h  socket.h  stream.h  thread.h  time.h  timestamp.h  unicode.h
libguac/include/_private/: client-handlers.h
libguac/include/guacamole/: pool.h
libguac/src/: Makefile.am  client-handlers.c  client.c  error.c  guacio.c  hash.c  instruction.c  log.c  palette.c  plugin.c  pool.c  protocol.c  socket-fd.c  socket-nest.c  socket.c  thread.c  timestamp.c  unicode.c
libguac/tests/: Makefile.am  test_client.c  test_libguac.c  test_protocol.c  test_unicode.c
libguac/tests/client/: buffer_pool.c  client_suite.c  client_suite.h  layer_pool.c  resource_pool.c
libguac/tests/protocol/: instruction_read.c  instruction_write.c  nest_write.c  suite.c  suite.h
libguac/tests/util/: guac_pool.c  (+1 more)
protocols/rdp/: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  configure.in
protocols/ssh/: Makefile.am  README  configure.ac  configure.in
protocols/vnc/: .gitignore  .package.dsc  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  configure.in
src/common/: .gitignore  Makefile.am  blank_cursor.c  clipboard.c  cursor.c  display.c  dot_cursor.c  guac_blank_cursor.c  guac_blank_cursor.h  guac_clipboard.c  guac_clipboard.h  guac_cursor.c  guac_cursor.h  guac_display.c  guac_display.h  guac_dot_cursor.c  guac_dot_cursor.h  guac_ibar_cursor.c  guac_ibar_cursor.h  guac_iconv.c  guac_iconv.h  guac_io.c  guac_io.h  guac_json.c  guac_json.h  guac_list.c  guac_pointer_cursor.c  guac_pointer_cursor.h  guac_recording.c  guac_recording.h  guac_rect.c  guac_rect.h  guac_string.c  guac_string.h  guac_surface.c  guac_surface.h  guac_surface_smoothness.c  guac_surface_smoothness.h  ibar_cursor.c  iconv.c  (+10 more)
src/common-ssh/: .gitignore  Makefile.am  buffer.c  dsa-compat.c  guac_sftp.c  guac_sftp.h  guac_ssh.c  guac_ssh.h  guac_ssh_buffer.c  guac_ssh_buffer.h  guac_ssh_config.c  guac_ssh_config.h  guac_ssh_key.c  guac_ssh_key.h  guac_ssh_user.c  guac_ssh_user.h  key.c  rsa-compat.c  sftp.c  ssh.c  tunnel.c  user.c
src/dbshell/: .gitignore  Makefile.am  buffer.c  client.c  history.c  line-editor.c  repl.c  settings.c  splitter.c  table.c
src/guacclip/: .gitignore  Makefile.am  guacclip.c  guacclip.h  instructions.c  instructions.h  interpret.c  interpret.h  log.c  log.h  sha256.c  sha256.h  state.c  state.h
src/guacd/: .gitignore  Makefile.am  client-map.c  client-map.h  client.c  client.h  conf-args.c  conf-args.h  conf-file.c  conf-file.h  conf-parse.c  conf-parse.h  conf.h  connection.c  connection.h  daemon.c  log.c  log.h  move-fd.c  move-fd.h  move-pipe.c  move-pipe.h  proc-map.c  proc-map.h  proc.c  proc.h  socket-ssl.c  socket-ssl.h  user.c  user.h
src/guacenc/: .gitignore  Makefile.am  buffer.c  buffer.h  cursor.c  cursor.h  display-buffers.c  display-flatten.c  display-image-streams.c  display-layers.c  display-sync.c  display.c  display.h  encode.c  encode.h  ffmpeg-compat.c  ffmpeg-compat.h  guacenc.c  guacenc.h  image-stream.c  image-stream.h  instruction-blob.c  instruction-cfill.c  instruction-copy.c  instruction-cursor.c  instruction-dispose.c  instruction-end.c  instruction-img.c  instruction-mouse.c  instruction-move.c  instruction-rect.c  instruction-shade.c  instruction-size.c  instruction-sync.c  instruction-transfer.c  instructions.c  instructions.h  jpeg.c  jpeg.h  layer.c  (+11 more)
src/guaclog/: .gitignore  Makefile.am  guaclog  guaclog.c  guaclog.h  instruction-key.c  instructions.c  instructions.h  interpret.c  interpret.h  key-name.c  key-name.h  keydef.c  keydef.h  log.c  log.h  state.c  state.h
src/libguac/: .gitignore  Makefile.am  argv.c  audio.c  client-handlers.c  client-handlers.h  client-internal.h  client.c  display-builtin-cursors.c  display-builtin-cursors.h  display-cursor.c  display-flush.c  display-layer-list.c  display-layer.c  display-plan-combine.c  display-plan-rect.c  display-plan-search.c  display-plan.c  display-plan.h  display-priv.h  display-render-thread.c  display-worker.c  display.c  eintr.h  encode-jpeg.c  encode-jpeg.h  encode-png.c  encode-png.h  encode-webp.c  encode-webp.h  error.c  fifo.c  file-private.h  file.c  fips.c  flag.c  handle-helpers.c  hash.c  id.c  id.h  (+45 more)
src/libguacd/: Makefile.am  log.c  socket-ssl.c  user.c
src/terminal/: .gitignore  Makefile.am  blank.c  blank.h  buffer.c  buffer.h  char-mappings.c  char_mappings.h  color-scheme.c  color_scheme.c  common.c  common.h  cursor.c  cursor.h  display.c  display.h  ibar.c  ibar.h  named-colors.c  packet.c  packet.h  palette.c  pointer.c  pointer.h  scrollbar.c  scrollbar.h  select.c  selection-point.c  terminal-handlers.c  terminal-stdin-stream.c  terminal.c  terminal.h  terminal_handlers.c  terminal_handlers.h  types.h  typescript.c  typescript.h  xparsecolor.c
tests/: Makefile.am  test_libguac  test_libguac.c
tests/client/: buffer_pool.c  client_suite.c  client_suite.h  layer_pool.c
tests/common/: common_suite.c  common_suite.h  guac_iconv.c  guac_rect.c  guac_string.c
tests/protocol/: base64_decode.c  instruction_parse.c  instruction_read.c  instruction_write.c  nest_write.c  suite.c  suite.h
tests/util/: guac_pool.c  guac_unicode.c  util_suite.c  util_suite.h
(+1087 files in other folders)
